Fixed sidebar positioning on mobile when not logged in

--- a/app/components/game-nav/style.scss
+++ b/app/components/game-nav/style.scss
@@ -400,6 +400,9 @@ body.free{
       width:100%;
       height: $max-block-size;
     }
+    &.bottom-nav-disabled{
+      display:none;
+    }
   }
   
   #nav-sidebar-close {
